...
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <string name="Toast_double_tap">Press again to close PSLab</string>
    <string name="Toast_magnetic_not_present">"The sensor required for this instrument is not present in your device"</string>

    <string name="nav_device">Connect Device</string>
    <string name="nav_instruments">Instruments</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>
    <string name="nav_documentation">Documentation</string>
    <string name="nav_buy_pslab">Buy PSLab</string>
    <string name="nav_report">Feedback &amp; Bugs</string>
    <string name="nav_help_feedback">FAQ</string>
    <string name="nav_share">Share App</string>
...
    <string name="scanned_devices_list_title">Scanned Devices</string>
    <string name="bluetooth_not_supported">Your phone does not support bluetooth</string>
    <string name="incorrect_IP_address_message">Please enter valid IP address</string>
    <string name="enter_IP_hint">Enter IP address of ESP module</string>
    <string name="esp_connect_text">Connect</string>

    <string name="oscilloscope">Oscilloscope</string>
    <string name="multimeter">Multimeter</string>
    <string name="logical_analyzer">Logic Analyzer</string>
    <string name="wave_generator">Wave Generator</string>
    <string name="sensors">Sensors</string>
    <string name="power_source">Power Source</string>
    <string name="record_title">Record current data</string>

    <string name="setting_auto_start_key">setting_auto_start</string>
    <string name="setting_auto_start_summary">Auto start app when PSLab device is connected</string>
    <string name="settting_auto_start_title">Auto Start</string>
    <string name="setting_data_format_key">export_data_format_list</string>
    <string name="setting_data_format_title">Export Data Format</string>

    <string name="control_item_1">Control</string>
    <string name="control_item_2">Read</string>
    <string name="control_item_3">Advanced</string>
...
