...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/home_fragment_padding">

            <ImageView
                android:id="@+id/img_device_status"
                android:layout_width="@dimen/device_status_width"
                android:layout_height="@dimen/device_status_height"
                android:layout_gravity="center"
                android:src="@drawable/icons_usb_disconnected_100" />

            <TextView
                android:id="@+id/tv_device_status"
                android:layout_width="match_parent"
                android:layout_height="@dimen/device_status_height_text"
                android:layout_marginBottom="@dimen/device_status_margin_bottom"
                android:gravity="center"
                android:padding="@dimen/home_fragment_padding"
                android:text="@string/device_status_text"
...
